# Iridium

./: .gitignore  CMakeLists.txt  README.md  Sources.txt
data/: floor.yml  large.yml  scene.yml  simple_floor.yml  teapot.off  twice.yml
data/Defs/: SceneDef.yml
src/: Iridium.cpp  Iridium.h  Main.cpp  Shimmerlight.cpp  Shimmerlight.h
src/defs/: CameraDef.h  LightDef.h  MeshDef.h  ModelDef.h  TransformDef.h
src/geometry/: BoundingVolumeHierarchy.cpp  BoundingVolumeHierarchy.h  Box.cpp  Box.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  OffSerializer.cpp  OffSerializer.h  Parallelogram.cpp  Parallelogram.h  Primitive.h  Ray.cpp  Ray.h  RayTraceInfo.cpp  RayTraceInfo.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h
src/misc/: Options.cpp  Options.h  Transform.cpp  Transform.h  Vector3dConvert.h
src/noise/: AdriansPerlinNoiseSampler.h  LibraryPerlinNoiseSampler.h  PerlinFilterMode.h  PerlinNoiseSampler.cpp  PerlinNoiseSampler.h
src/scene/: Camera.cpp  Camera.h  CameraMode.h  Light.cpp  Light.h  Scene.cpp  Scene.h
src/testing/: Base.h  Derived.h
src/texture/: CheckerboardTextureGenerator.cpp  CheckerboardTextureGenerator.h  ChunkedPpmTextureSerializer.cpp  ChunkedPpmTextureSerializer.h  LodeTextureSerializer.cpp  LodeTextureSerializer.h  PerlinTextureGenerator.cpp  PerlinTextureGenerator.h  PpmTextureSerializer.cpp  PpmTextureSerializer.h  StbImplementation.cpp  StbImplementation.h  StbTextureSerializer.cpp  StbTextureSerializer.h  Texture.cpp  Texture.h  TextureSerializer.cpp  TextureSerializer.h
src/utils/: StringUtils.cpp  (+1 more)
